--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,147 +1,67 @@
 /*
-	Highlights by HTML5 UP
+	Arcana by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
-/* Basic */
-
-	body, html {
-		height: 100%;
-	}
-
-	html {
-		background: none;
-	}
-
-/* List */
-
-	ul.actions li {
-		padding: 0 0 0 1em;
-	}
-
-		ul.actions li:first-child {
-			padding-left: 0;
-		}
 
 /* Form */
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	select,
 	textarea {
-		border: solid 2px #dddddd;
 		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"] {
-		line-height: 3em;
+/* Image */
+
+	.image {
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		font-size: 3em;
-	}
-
-		input[type="checkbox"] + label:before,
-		input[type="radio"] + label:before {
-			display: none;
+		.image img {
+			position: relative;
+			-ms-behavior: url("assets/js/ie/PIE.htc");
 		}
+
+/* Icon */
+
+	.icon.major {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+	}
 
 /* Button */
 
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
-	button,
 	.button {
-		border: solid 2px #dddddd;
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-/* Main BG */
+/* Box */
 
-	.main-bg {
-		z-index: 0;
+	.box.post .inner {
+		margin-left: 35%;
 	}
 
-/* Main */
+/* Dropotron */
 
-	.main {
-		background-size: cover;
+	.dropotron {
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		.main .container {
-			background: #fff;
-			border-top: solid 1px #dddddd;
-			position: relative;
-			z-index: 1;
-		}
+/* Banner */
 
-		.main .goto-next {
-			text-decoration: none;
-		}
-
-			.main .goto-next:before {
-				-moz-osx-font-smoothing: grayscale;
-				-webkit-font-smoothing: antialiased;
-				font-family: FontAwesome;
-				font-style: normal;
-				font-weight: normal;
-				text-transform: none !important;
-			}
-
-			.main .goto-next:before {
-				color: #dddddd;
-				content: '\f063';
-				display: block;
-				font-size: 2em;
-				height: 2em;
-				left: 0;
-				line-height: 2em;
-				position: absolute;
-				text-align: center;
-				text-indent: 0;
-				top: 0;
-				width: 2em;
-			}
-
-/* Header */
-
-	#header {
+	#banner {
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
-		background-image: url("../../images/bg.jpg");
-		background-size: cover;
-		height: 100%;
 	}
 
-		#header:after {
-			min-height: 100%;
-		}
+/* Wrapper */
 
-		#header header {
-			position: relative;
-			z-index: 1;
-		}
-
-		#header .container {
-			background: #fff;
-			z-index: 1;
-		}
-
-/* Footer */
-
-	#footer {
-		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
-		background-image: url("../../images/bg.jpg");
-		background-size: cover;
+	.wrapper.style2 {
+		background: #fdfdfd url("images/bg01.png");
 	}
-
-		#footer .container {
-			background: #fff;
-			border-top: solid 1px #dddddd;
-			position: relative;
-			z-index: 1;
-		}
