--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,11 +1,11 @@
 /*
-	Highlights by HTML5 UP
+	Arcana by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Loader */
+/* Header */
 
-	html body:before, html body:after {
-		display: none !important;
+	#nav > ul > li.current:before {
+		display: none;
 	}
