--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -1,63 +1,40 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
 
 /*
-	Highlights by HTML5 UP
+	Arcana by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
-/* Basic */
-
-	body, html {
-		height: 100%;
-	}
-
-	html {
-		background: none;
-	}
-
-/* List */
-
-	ul {
-		&.actions {
-			li {
-				padding: 0 0 0 (_size(element-margin) * 0.5);
-
-				&:first-child {
-					padding-left: 0;
-				}
-			}
-		}
-	}
 
 /* Form */
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	select,
 	textarea {
-		border: solid 2px _palette(border);
 		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"] {
-		line-height: _size(element-height);
+/* Image */
+
+	.image {
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		img {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+		}
 	}
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		font-size: 3em;
+/* Icon */
 
-		& + label {
-			&:before {
-				display: none;
-			}
+	.icon {
+		&.major {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
 		}
 	}
 
@@ -66,83 +43,37 @@
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
-	button,
 	.button {
-		border: solid 2px _palette(border);
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
-/* Main BG */
+/* Box */
 
-	.main-bg {
-		z-index: 0;
-	}
-
-/* Main */
-
-	.main {
-		background-size: cover;
-
-		.container {
-			background: _palette(bg);
-			border-top: solid 1px _palette(border);
-			position: relative;
-			z-index: 1;
-		}
-
-		.goto-next {
-			@include icon;
-
-			&:before {
-				color: _palette(border);
-				content: '\f063';
-				display: block;
-				font-size: 2em;
-				height: 2em;
-				left: 0;
-				line-height: 2em;
-				position: absolute;
-				text-align: center;
-				text-indent: 0;
-				top: 0;
-				width: 2em;
+	.box {
+		&.post {
+			.inner {
+				margin-left: 35%;
 			}
 		}
 	}
 
-/* Header */
+/* Dropotron */
 
-	#header {
-		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background-image: url('../../images/bg.jpg');
-		background-size: cover;
-		height: 100%;
-
-		&:after {
-			min-height: 100%;
-		}
-
-		header {
-			position: relative;
-			z-index: 1;
-		}
-
-		.container {
-			background: _palette(bg);
-			z-index: 1;
-		}
+	.dropotron {
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
-/* Footer */
+/* Banner */
 
-	#footer {
+	#banner {
 		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-		background-image: url('../../images/bg.jpg');
-		background-size: cover;
+	}
 
-		.container {
-			background: _palette(bg);
-			border-top: solid 1px _palette(border);
-			position: relative;
-			z-index: 1;
+/* Wrapper */
+
+	.wrapper {
+		&.style2 {
+			background: #fdfdfd url('images/bg01.png');
 		}
 	}
