--- a/assets/sass/ie9.scss
+++ b/assets/sass/ie9.scss
@@ -1,20 +1,23 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
 
 /*
-	Highlights by HTML5 UP
+	Arcana by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Loader */
+/* Header */
 
-	html {
-		body {
-			&:before, &:after {
-				display: none !important;
+	#nav {
+		> ul {
+			> li {
+				&.current {
+					&:before {
+						display: none;
+					}
+				}
 			}
 		}
 	}
