--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,35 +1,31 @@
 /*
-	Arcana by HTML5 UP
+	Spectral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Icon */
+
+	.icon.major {
+		border: none;
+	}
+
+		.icon.major:before {
+			font-size: 3em;
+		}
+
 /* Form */
+
+	label {
+		color: #2E3842;
+	}
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	select,
 	textarea {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-/* Image */
-
-	.image {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-		.image img {
-			position: relative;
-			-ms-behavior: url("assets/js/ie/PIE.htc");
-		}
-
-/* Icon */
-
-	.icon.major {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 1px #dfdfdf;
 	}
 
 /* Button */
@@ -37,31 +33,63 @@
 	input[type="submit"],
 	input[type="reset"],
 	input[type="button"],
+	button,
 	.button {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 2px #dfdfdf;
 	}
 
-/* Box */
+		input[type="submit"].special,
+		input[type="reset"].special,
+		input[type="button"].special,
+		button.special,
+		.button.special {
+			border: 0 !important;
+		}
 
-	.box.post .inner {
-		margin-left: 35%;
+/* Page Wrapper + Menu */
+
+	#menu {
+		display: none;
 	}
 
-/* Dropotron */
-
-	.dropotron {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+	body.is-menu-visible #menu {
+		display: block;
 	}
 
-/* Banner */
+/* Header */
 
-	#banner {
+	#header nav > ul > li > a.menuToggle:after {
+		display: none;
+	}
+
+/* Banner + Wrapper (style4) */
+
+	#banner,
+	.wrapper.style4 {
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
 	}
 
-/* Wrapper */
+		#banner:before,
+		.wrapper.style4:before {
+			display: none;
+		}
 
-	.wrapper.style2 {
-		background: #fdfdfd url("images/bg01.png");
+/* Banner */
+
+	#banner .more {
+		height: 4em;
 	}
+
+		#banner .more:after {
+			display: none;
+		}
+
+/* Main */
+
+	#main > header {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	}
+
+		#main > header:before {
+			display: none;
+		}
